<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DeskOrderActivity">
    <TextView
            android:text="@string/length_label"
            android:layout_width="282dp"
            android:layout_height="53dp" android:id="@+id/lengthLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.054"
            tools:text="@string/length_label" android:textSize="20sp"/>
    <TextView
            android:text="@string/width_label"
            android:layout_width="282dp"
            android:layout_height="53dp" android:id="@+id/widthLabel"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.258"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/deskLength"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthLabel"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/deskWidth"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/widthLabel" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/drawer_select"
            android:layout_width="282dp"
            android:layout_height="53dp" android:id="@+id/drawerLabel"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.449"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/drawerCount"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/drawerLabel"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.008"/>
    <TextView
            android:text="@string/wood_choice"
            android:layout_width="282dp"
            android:layout_height="53dp" android:id="@+id/woodLabel"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.503" app:layout_constraintVertical_bias="0.659"
            android:textSize="20sp"/>
    <com.google.android.material.chip.ChipGroup
            android:layout_width="303dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/woodLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/woodType"
            app:singleSelection="true">

        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/mahogany"
                android:text="@string/mahogany"/>
        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/oak"
                android:text="@string/oak"/>
        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/pine"
                android:text="@string/pine"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
            android:text="@string/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/submitButton"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/woodType"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.183"
            android:onClick="launchDeskOrder"/>
</androidx.constraintlayout.widget.ConstraintLayout>