<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CustomerActivity">
    <TextView
            android:layout_width="358dp"
            android:layout_height="43dp"
            android:text="@string/welcome_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.047"
            android:id="@+id/welcomeLabel" android:fontFamily="sans-serif" android:textSize="24sp"/>
    <ImageView
            android:src="@drawable/desk"
            android:layout_width="300dp"
            android:layout_height="144dp" android:id="@+id/deskImg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginBottom="204dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/woodCost" app:layout_constraintVertical_bias="0.116"/>
    <TextView
            android:text="@string/name_label"
            android:layout_width="298dp"
            android:layout_height="54dp" android:id="@+id/nameLabel"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/deskImg" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.042"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/customerName"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/customerName" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:onClick="launchApp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/base_label"
            android:layout_width="200dp"
            android:layout_height="25dp" android:id="@+id/baseCost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintVertical_bias="0.013"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/add2_label"
            android:layout_width="200dp"
            android:layout_height="40dp" android:id="@+id/dimensionCost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/baseCost"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/nameLabel" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/add3_label"
            android:layout_width="200dp"
            android:layout_height="25dp" android:id="@+id/drawerCost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dimensionCost"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.006"/>
    <TextView
            android:text="@string/add4_label"
            android:layout_width="197dp"
            android:layout_height="40dp" android:id="@+id/woodCost"
            app:layout_constraintTop_toBottomOf="@+id/drawerCost"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.05"/>

</androidx.constraintlayout.widget.ConstraintLayout>