<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CustomerOrderMainActivity">
    <ImageView
            android:layout_width="128dp"
            android:layout_height="114dp" app:srcCompat="@drawable/check" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.025"/>
    <TextView
            android:text="@string/order_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderConfirmed"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" android:textSize="16sp"/>
    <TextView
            android:text="@string/order_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderDetails"
            app:layout_constraintTop_toBottomOf="@+id/orderConfirmed"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.027"
            android:textSize="24sp"/>
    <TextView
            android:text="TextView"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/customerNameDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/dimensionLabel"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/deskDimensionsDisplay"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/woodTypeDisplay"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.507"/>
    <TextView
            android:text="TextView"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/drawerCountDisplay"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintVertical_bias="0.051"/>
    <TextView
            android:text="@string/total_label"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/totalLabel"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/drawerCountDisplay"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="20sp" android:textStyle="bold"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalPriceDisplay"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/totalLabel"/>
    <TextView
            android:text="@string/dimension_label"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/dimensionLabel"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/orderDetails" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.014"/>
    <TextView
            android:text="@string/cusName_label"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/textView2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/customerNameDisplay"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/wood_label"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/textView3"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/deskDimensionsDisplay"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.008" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/drawers_label"
            android:layout_width="133dp"
            android:layout_height="30dp" android:id="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/woodTypeDisplay"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>